# QlibResearch

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sources.yml
docs/: Experience and Improvement for Worklflow Runs.md  README.md  qlib-explicit-workflow-node-guide.md  qlib-explicitnative-workflow-user-guide.md  qlib-native-workflow-example.md  qlib-native-workflow-node-guide.md
docs/01-overview/: project-positioning.md
docs/02-getting-started/: cli-quickstart.md  environment-setup.md  notebook-quickstart.md
docs/03-workflows/: native-workflow.md  panel-export.md  train-publish-sync.md
docs/04-artifacts/: portfolio-targets.md  score-snapshot.md
docs/05-architecture/: data-flow.md  fdh-adaptation-guide.md  system-boundaries.md
docs/06-ui-api-future/: api-contract.md  information-architecture.md  (+1 more)
notebooks/: qlib_end_to_end_workflow.ipynb  qlib_workflow_by_code_explicit.ipynb  qlib_workflow_by_code_native.ipynb
scripts/: benchmark_panel_formats.py  build_native_workflow_evidence_pack.py  evaluate_convergence_weekly.py  evaluate_native_weekly.py  export_weekly_panel.py  run_research_analysis.py  sync_to_valueinvesting.py  train_publish_snapshot.py
tests/: test_app_services.py  test_artifacts.py  test_backtest.py  test_index_benchmark.py  test_index_data_provider.py  test_native_workflow.py  test_qlib_pipeline.py  test_research_universe.py  test_run_research_analysis.py  test_score_store.py  test_sync.py  test_weekly_feature_panel.py  test_weekly_model_eval.py
web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+80 files in other folders)
